refactor: 提取 AuthServiceImpl 中重复的角色查询逻辑
- 新增 getUserRoles() 私有方法封装角色查询
- 使用 UserRoles record 封装返回结果
- 消除 login() 和 getCurrentUser() 中的重复代码